ensured mobile menu z-index was -1 when non active so page was clickable, changed this in css as well as JS animation.

--- a/src/sass/_mobile-menu.scss
+++ b/src/sass/_mobile-menu.scss
@@ -7,7 +7,7 @@
     width: 100%;
     background-color: #fff;
     opacity: 0;
-    z-index: 0;
+    z-index: -1;
     //ul
     &__menu {
         position: absolute;
