--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -29,4 +29,5 @@ ul, li {
 a {
     text-decoration: none;
     color: black;
+    cursor: pointer;
 }
